force-app/src/objects/fferpcore__SlackChannelInviteEvent__e.object
<CustomObject>
    <description>Tracks member changes for related Slack channels.</description>
    <fields>
        <fullName>fferpcore__ChannelId__c</fullName>
        <description>The identifier for the Slack channel.</description>
        <label>Channel ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ErrorCode__c</fullName>
        <description>A code representing an error that occurred.</description>
        <label>Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Invited__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, indicates that the specified users have been added to the Slack channel. If deselected, indicates that the specified users have been removed from the channel.</description>
        <label>Added to Channel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__Ok__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the event was successful.</description>
        <label>OK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__SalesforceObjectId__c</fullName>
        <description>The identifier for the Salesforce record.</description>
        <label>Salesforce Record ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__SalesforceUserIds__c</fullName>
        <description>The list of users who have been added to or removed from the Slack channel.</description>
        <label>Salesforce User IDs</label>
        <length>650</length>
        <type>LongTextArea</type>
    </fields>
    <label>Slack Channel Member Event</label>
    <pluralLabel>Slack Channel Member Events</pluralLabel>
</CustomObject>